--- a/css/power_course.css
+++ b/css/power_course.css
@@ -398,7 +398,9 @@ background-color: #363636;
            text-align: center;
            color: white;
        }
-    
+       .main-footer .container .footer-item h4{
+        font-size: 12px;
+       }
 
 
 }
