--- a/css/power_firstpage.css
+++ b/css/power_firstpage.css
@@ -876,6 +876,9 @@ flex-direction: column;
             text-align: center;
             color: white;
         }
+        .main-footer .container .footer-item h4{
+            font-size: 12px;
+        }
      
 
 
