--- a/css/power_introduce.css
+++ b/css/power_introduce.css
@@ -317,7 +317,9 @@ body{
            text-align: center;
            color: white;
        }
-    
+       .main-footer .container .footer-item h4{
+        font-size: 12px;
+        }
 
 
 }
