--- a/css/power_experience.css
+++ b/css/power_experience.css
@@ -645,7 +645,9 @@ body{
            text-align: center;
            color: white;
        }
-    
+       .main-footer .container .footer-item h4{
+        font-size: 12px;
+       }
 
 
 }
